# zap-sign-crud

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  install-simple.ps1  install.ps1  test.py
backend/: .env  Dockerfile  README.md  create_test_data.py  init_data.py  pyproject.toml
backend/core/: settings.py  urls.py
backend/zapsign/: admin.py  apps.py  models.py  serializers.py  urls.py  viewsets.py
backend/zapsign/migrations/: 0001_initial.py  0002_auto_20250725_0007.py
backend/zapsign/services/: document_service.py  zapsign_service.py
backend/zapsign/tests/: __init__.py  test_models.py  test_serializers.py  test_viewsets.py  test_zapsign_service.py
frontend/: Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts  app.routes.ts
frontend/src/app/core/models/: document.interface.ts
frontend/src/app/core/services/: api.service.ts  zapsign.service.ts
frontend/src/app/features/admin/companies/: companies-admin.component.ts
frontend/src/app/features/admin/signers/: signers-admin.component.ts
frontend/src/app/features/documents/: documents-routing.module.ts  documents.module.ts  documents.routes.ts
frontend/src/app/features/documents/components/company-quick-manager/: company-quick-manager.component.ts
frontend/src/app/features/documents/components/confirm-delete-dialog/: confirm-delete-dialog.component.ts
frontend/src/app/features/documents/services/: document.service.spec.ts  document.service.ts
frontend/src/app/features/shared/: shared.module.ts
frontend/src/environments/: environment.prod.ts
(+18 files in other folders)
