[project]
name = "zap-sign-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "AndresFelipe_s",email = "info@lasus.com.co"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=4.2)",
    "djangorestframework (>=3.16.0,<4.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-django = "^4.11.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
